# rugby-lineal-cup

./: .env.example  .gitignore  LICENSE.md  README.md  app.py  cdk.json  deploy.sh  go.mod  go.sum  pyproject.toml
cdk/: config.py  config_base.py  stack.py
cdk/constructs/: lambda_function.py  s3.py  vpc.py
config/: common.yaml  dev.yaml  prod.yaml
lineal_rugby/: app.py  config.py  models.py
service/lambdas/lineal_world_title_etl/: config.py  index.py  requirements.txt
service/lambdas/utils/: README.md  requirements.txt  s3.py  secret_manager.py
tests/fixtures/: competition_seasons.json  competitions.json  season_competitors.json  season_summaries.json  seasons.json  sport_event_summary.json
web/: main.go
web/assets/: men_lineal_cup_stats.json  women_lineal_cup_stats.json
web/templates/: about.html  footer.html  header.html  index.html
web_static/: 404.html  about.html  index.html
